--- a/continuum-web/src/main/resources/templates/screens/Summary.vm
+++ b/continuum-web/src/main/resources/templates/screens/Summary.vm
@@ -68,7 +68,7 @@ $page.setTitle( "Continuum" )
         <td>
           <div align="center">
           #if ( $continuum.isInBuildingQueue( $item.id ) || $continuum.isInCheckoutQueue( $item.id ) )
-            <b><img src="/continuum/images/inqueue.gif" alt="In Queue" title="In Queue" width="16" height="16"></b>
+            <b><img src="$requestUtil.getContextPath()/images/inqueue.gif" alt="In Queue" title="In Queue" width="16" height="16"></b>
           #elseif ( $item.state == 1 || $item.state == 2 || $item.state == 3 || $item.state == 4 )
             #if ( $item.buildNumber != 0 )
               #set ( $build = $buildResultsInSuccess.get( $item.id ) )
@@ -77,7 +77,7 @@ $page.setTitle( "Continuum" )
               $item.buildNumber
             #end
           #else
-            <b><img src="/continuum/images/inqueue.gif" alt="In Queue" title="In Queue" width="16" height="16"></b>
+            <b><img src="$requestUtil.getContextPath()/images/inqueue.gif" alt="In Queue" title="In Queue" width="16" height="16"></b>
           #end
           </div>
         </td>
@@ -90,7 +90,7 @@ $page.setTitle( "Continuum" )
           #if ( $continuum.isInBuildingQueue( $item.id ) || $continuum.isInCheckoutQueue( $item.id ) )
             Build
           #elseif ( $item.state == 1 || $item.state == 2 || $item.state == 3 || $item.state == 4 )
-            <a href="$link.addPathInfo('action', 'cam').addPathInfo('cid','buildProject').addPathInfo('id', $item.id)"><img src="/continuum/images/buildnow.gif" alt="Build Now" title="Build Now" width="16" height="16" border="0"></a>
+            <a href="$link.addPathInfo('action', 'cam').addPathInfo('cid','buildProject').addPathInfo('id', $item.id)"><img src="$requestUtil.getContextPath()/images/buildnow.gif" alt="Build Now" title="Build Now" width="16" height="16" border="0"></a>
           #else
             &nbsp;
           #end
@@ -99,7 +99,7 @@ $page.setTitle( "Continuum" )
 
         <td width="1%">
         #if ( $item.latestBuildId > 0 )
-          <a href="$link.setPage('ProjectBuilds.vm').addPathInfo('view', "ProjectBuilds").addPathInfo('id', $item.id)"><img src="/continuum/images/buildhistory.gif" alt="Build History" title="Build History" width="16" height="16" border="0"></a>
+          <a href="$link.setPage('ProjectBuilds.vm').addPathInfo('view', "ProjectBuilds").addPathInfo('id', $item.id)"><img src="$requestUtil.getContextPath()/images/buildhistory.gif" alt="Build History" title="Build History" width="16" height="16" border="0"></a>
         #else
           &nbsp;
         #end
@@ -107,7 +107,7 @@ $page.setTitle( "Continuum" )
 
         <td width="1%">
         #if ( $item.state == 1 || $item.state == 2 || $item.state == 3 || $item.state == 4 || $item.state == 6 )
-          <a href="$link.setPage('WorkingCopy.vm').addPathInfo('view', "WorkingCopy").addPathInfo('id', $item.id)"><img src="/continuum/images/workingcopy.gif" alt="Working Copy" title="Working Copy" width="16" height="16" border="0"></a>
+          <a href="$link.setPage('WorkingCopy.vm').addPathInfo('view', "WorkingCopy").addPathInfo('id', $item.id)"><img src="$requestUtil.getContextPath()/images/workingcopy.gif" alt="Working Copy" title="Working Copy" width="16" height="16" border="0"></a>
         #else
           &nbsp;
         #end
@@ -116,7 +116,7 @@ $page.setTitle( "Continuum" )
         #if ( $continuum.security.isAuthorized( $c1user, "deleteProject" ) )
           <td width="1%">
           #if ( $item.state == 1 || $item.state == 2 || $item.state == 3 || $item.state == 4 )
-          <a href="$link.setPage('Delete.vm').addPathInfo('fid', "$!{item.executorId}Project").addPathInfo('id', $item.id)"><img src="/continuum/images/delete.gif" alt="Delete" title="Delete" width="16" height="16" border="0"></a>
+          <a href="$link.setPage('Delete.vm').addPathInfo('fid', "$!{item.executorId}Project").addPathInfo('id', $item.id)"><img src="$requestUtil.getContextPath()/images/delete.gif" alt="Delete" title="Delete" width="16" height="16" border="0"></a>
           #else
           &nbsp;
           #end
@@ -131,9 +131,9 @@ $page.setTitle( "Continuum" )
     #if ( $continuum.security.isAuthorized( $c1user, "buildProject" ) )
     <div class="functnbar3">
       <form method="post" action="$link">
-        <img src="/continuum/images/icon_success_sml.gif" alt="Success" title="Success"/> $success
-        <img src="/continuum/images/icon_warning_sml.gif" alt="Failed" title="Failed"/> $failures
-        <img src="/continuum/images/icon_error_sml.gif" alt="Error" title="Error"/> $errors
+        <img src="$requestUtil.getContextPath()/images/icon_success_sml.gif" alt="Success" title="Success"/> $success
+        <img src="$requestUtil.getContextPath()/images/icon_warning_sml.gif" alt="Failed" title="Failed"/> $failures
+        <img src="$requestUtil.getContextPath()/images/icon_error_sml.gif" alt="Error" title="Error"/> $errors
         #if ( $items && $items.size() > 0 )
         #hidden ( "action" "cam" )
         #hidden ( "cid" "buildAllProjects" )
@@ -144,9 +144,9 @@ $page.setTitle( "Continuum" )
     </div>
     #else
     <div class="functnbar3">
-        <img src="/continuum/images/icon_success_sml.gif" alt="Success" title="Success"/> $success
-        <img src="/continuum/images/icon_warning_sml.gif" alt="Failed" title="Failed"/> $failures
-        <img src="/continuum/images/icon_error_sml.gif" alt="Error" title="Error"/> $errors
+        <img src="$requestUtil.getContextPath()/images/icon_success_sml.gif" alt="Success" title="Success"/> $success
+        <img src="$requestUtil.getContextPath()/images/icon_warning_sml.gif" alt="Failed" title="Failed"/> $failures
+        <img src="$requestUtil.getContextPath()/images/icon_error_sml.gif" alt="Error" title="Error"/> $errors
       </form>
     </div>
     #end
