[CONTINUUM-609] add a deployment repository to be used at the end of a Maven 2 build to deploy artifacts, if configured. Note that the MDO is changed, but its safe - JPOX updates the database with a nulled field as desired.
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@385975 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/Configure.vm
+++ b/continuum-web/src/main/resources/templates/screens/Configure.vm
@@ -45,6 +45,10 @@ $page.setTitle( "Configure Continuum" )
           <th>Build Output Directory</th>
           <td><input type="text" name="buildOutputDirectory" value="build-output-directory" size="100"><br>If you define a relative path, it will be relative to $continuum.configuration.applicationHome</td>
         </tr>
+        <tr>
+          <th>Deployment Repository Directory</th>
+          <td><input type="text" name="deploymentRepositoryDirectory" size="100"><br><strong>Optional.</strong> If you define a relative path, it will be relative to $continuum.configuration.applicationHome</td>
+        </tr>
         </tbody>
       </table>
       </div>
