--- a/continuum-web/src/main/resources/templates/screens/EditContinuumConfiguration.vm
+++ b/continuum-web/src/main/resources/templates/screens/EditContinuumConfiguration.vm
@@ -27,6 +27,14 @@ $page.setTitle( "Edit Continuum Configuration" )
           <td><input type="text" name="conf.buildOutputDirectory" value="$continuum.configuration.buildOutputDirectory" size="100"/> If you define a relative path, it will be relative to $continuum.configuration.applicationHome</td>
         </tr>
         <tr class="b">
+          <th>Deployment Repository Directory</th>
+          <td><input type="text" name="conf.deploymentRepositoryDirectory"
+           #if ( $continuum.configuration.deploymentRepositoryDirectory )
+            value="$continuum.configuration.deploymentRepositoryDirectory"
+           #end
+          size="100"/> <strong>Optional</strong>. If you define a relative path, it will be relative to $continuum.configuration.applicationHome</td>
+        </tr>
+        <tr class="b">
           <th>Base URL</th>
           <td><input type="text" name="conf.url" value="$continuum.configuration.url" size="100"/></td>
         </tr>
