Fix date when they are null
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@386095 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/ProjectBuild.vm
+++ b/continuum-web/src/main/resources/templates/screens/ProjectBuild.vm
@@ -31,11 +31,11 @@ $page.setTitle( "Continuum - Continuum Web Build at $date.format('medium',$build
       <tbody>
       <tr class="b">
         <th>Start Time</th>
-        <td>$date.format('medium',$build.startTime)</td>
+        <td>$!{date.format('medium',$build.startTime)}</td>
       </tr>
       <tr class="b">
         <th>End Time</th>
-        <td>$date.format('medium',$build.endTime)</td>
+        <td>$!{date.format('medium',$build.endTime)}</td>
       </tr>
       <tr class="b">
         <th>Build Trigger</th>
